--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,6 +25,6 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-nav {
+/* nav {
   font-family: 'Bungee';
-}
+} */
