--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,6 +25,12 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-/* nav {
-  font-family: 'Bungee';
-} */
+ main {
+  display: block;
+  margin: 0 50px 0 50px;
+  width: 90%;
+  align-items: center;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
