--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -40,3 +40,22 @@
 .over-the-limit{
   color: red;
 }
+
+.error-message{
+  align-content: center;
+  border:4px solid red;
+  color: red;
+  display:flex;
+  flex-direction: row;
+  font-size: 1.2rem;
+  font-weight: bold;
+  justify-content: space-evenly;
+  margin: 8px;
+  width: 70%;
+}
+
+.icon-design{
+  font-size: 2rem;
+  align-self: center;
+}
+ 
