added media queries according to screen sizes

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -35,3 +35,17 @@ main {
   flex-direction: column;
   justify-content: center;
 }
+
+/*media query for desktop*/
+@media only screen and (min-width:1024px){
+  body{
+    display:flex;
+    justify-content: center;
+    align-content: center;
+  }
+  .container{
+    display:flex;
+    width:60%;
+    margin:200px 30px;
+  }
+} 
