Sass library added for styles to the project

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,38 +1,39 @@
 /*media query for every thing below 1024px*/
-@media only screen and (max-width:1024px){
-    #profile{
-      background-color: #ccac66;
-      background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
-      display: flex;
-      flex-direction: column;
-      height: 400px;
-      align-items: center;
-      justify-content: center;
-      margin-top: 120px;
-      width:100%;
-    }
-  
-    /*style for profile image*/
-    #image{
-      margin-top:3%;
-      display: flex;
-      justify-content: center;
-    }
+@media only screen and (max-width: 1024px) {
+  #profile {
+    background-color: goldenrod;
+    background-image: url(../images/back-pattern.png);
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 120px;
+    width: 100%;
   }
-  /*media query for desktop*/
-  @media only screen and (min-width:1024px){
-    #profile{
-      background-color: #ccac66;;
-      background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
-      display: flex;
-      flex-direction: column;
-      width:33%;
-      height:50%;
-      justify-content: center;
-      align-items: center;
-      margin:200px 30px;
-    }
-    #image{
-      margin-top: 7%;
-    }
+
+  /*style for profile image*/
+  #image {
+    margin-top: 3%;
+    display: flex;
+    justify-content: center;
   }
+}
+/*media query for desktop*/
+@media only screen and (min-width: 1024px) {
+  #profile {
+    background-color: goldenrod;
+    background-image: url(../images/back-pattern.png);
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    margin: 200px 30px;
+  }
+
+  #image {
+    margin-top: 7%;
+  }
+}
