--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -11,18 +11,19 @@
   background-color: transparent;
   border: none;
   width: 100%;
-  border-bottom: 3px solid #2b2b25;
-  color: #2c2b27;
+  border-bottom: 3px solid #2b2619;
+  color: #2b2619;
   font-weight: 700;
   height: 40px;
   outline: none;
   resize: none;
 }
+
 /*For form button styles*/
 .new-tweet button {
   background-color: #4056a1;
   color: #ffffff;
-  font-family: 'Bungee', sans-serif;
+  font-family: "Bungee", sans-serif;
   margin-top: 8px;
   outline: none;
   padding: 6px 9px;
@@ -33,19 +34,19 @@
 .counter {
   color: #2b2619;
   float: right;
-  font-family: Bungee, sans-serif;
+  font-family: "Bungee", sans-serif;
   margin-top: 8px;
 }
 
-.over-the-limit{
-  color: red;
+.over-the-limit {
+  color: #f32828;
 }
 
-.error-message{
+.error-message {
   align-content: center;
-  border:4px solid red;
-  color: red;
-  display:flex;
+  border: 4px solid #f32828;
+  color: #f32828;
+  display: flex;
   flex-direction: row;
   font-size: 1.2rem;
   font-weight: bold;
@@ -54,11 +55,7 @@
   width: 70%;
 }
 
-.icon-design{
+.icon-design {
   font-size: 2rem;
   align-self: center;
 }
-
-
-
- 
